# ai-youtube-content-crew

./: README.md
youtube_content_crew/: README.md  pyproject.toml
youtube_content_crew/src/youtube_content_crew/: crew.py  main.py
youtube_content_crew/src/youtube_content_crew/config/: agents.yaml  tasks.yaml
