[project]
name = "youtube_content_crew"
version = "0.1.0"
description = "youtube-content-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.12.2"
]

[project.scripts]
youtube_content_crew = "youtube_content_crew.main:run"
run_crew = "youtube_content_crew.main:run"
train = "youtube_content_crew.main:train"
replay = "youtube_content_crew.main:replay"
test = "youtube_content_crew.main:test"
run_with_trigger = "youtube_content_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
